# geocoder-kr

./: .gitignore  LICENSE  README.md  api_fast.py  pyproject.toml  requirements.txt  setup.cfg  start-api.sh  stop-api.sh
db/code/: PNU.csv
docs/: docs.md  index.md  install.md  multi_address_geocoding.md  reverse_geocoding.md  simple_geocoding.md
src/: api_fast.py
src/geocoder/hash/: JibunAddress.py
test/testfiles/: 필수test.txt
workflows/: publish.yml
